unpackaged/main/default/objects/General_Insurance_Claim__c/General_Insurance_Claim__c.object-meta.xml
<CustomObject>
    <label>General Insurance Claim</label>
    <nameField>
        <displayFormat>GIC-{00000}</displayFormat>
        <label>Claim Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Insurance Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>