unpackaged/main/default/objects/General_Insurance_Claim__c/fields/Claim_No__c.field-meta.xml
<CustomField>
    <fullName>Claim_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>