unpackaged/main/default/objects/General_Insurance_Claim__c/fields/Date_time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_time_of_Incident__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date &amp; time of Incident</label>
    <type>DateTime</type>
</CustomField>