unpackaged/main/default/objects/General_Insurance_Claim__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>General Insurance Claims (Insurance Company)</relationshipLabel>
    <relationshipName>General_Insurance_Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>