unpackaged/main/default/objects/General_Insurance_Claim__c/fields/Name_of_Insured__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Insured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>General Insurance Claims</relationshipLabel>
    <relationshipName>General_Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>