unpackaged/main/default/objects/General_Insurance_Claim__c/fields/Policy_Ref__c.field-meta.xml
<CustomField>
    <fullName>Policy_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Ref</label>
    <referenceTo>GI_General_Insurance_Policy__c</referenceTo>
    <relationshipLabel>General Insurance Claims</relationshipLabel>
    <relationshipName>General_Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>