unpackaged/main/default/objects/General_Insurance_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Date_time_of_Incident__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>