unpackaged/main/default/objects/General_Insurance_Claim__c/listViews/Pending_with_Admin.listView-meta.xml
<ListView>
    <fullName>Pending_with_Admin</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Date_time_of_Incident__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>equals</operation>
        <value>Under Approval</value>
    </filters>
    <label>Pending with Admin</label>
</ListView>